# tmc_tools

./: .gitignore  README.md  pyproject.toml  setup.cfg
tests/: test_dbloc.py  test_graph_constructors.py  test_graph_metrics.py  test_io.py  test_io_tools.py  test_orbital_diagrams.py  test_racs.py  test_tools.py
tests/racs/: test_octahedral_racs.py  test_racs.py  test_tetrahedral_racs.py
tests/resources/: crf6.molden  crf6_fixed.molden
tests/testresources/: ADUYUV.mol2  co_acac_en_water_hydrogensulfide.xyz  cr_acac_acac_bipy.xyz  crf6_fixed.molden  cyanide.mol  fe_carbonyl_6.xyz  furan.mol  mn_furan_water_ammonia_furan_water_ammonia.xyz  racs_Co_acac_en_water_hydrogensulfide.pickle  racs_Cr_acac_acac_bipy.pickle  racs_Fe(CO)_6.pickle  racs_Fe_carbonyl_6.pickle  racs_Mn_furan_water_ammonia_furan_water_ammonia.pickle
tests/testresources/tetrahedral_racs/: rac_features.npy
tests/testresources/tetrahedral_racs/xyz_files/: metal_co_ox_2_spin_2_ligstr_acetonitrile_acetonitrile_acetonitrile_acetonitrile_charge_nan.xyz  metal_co_ox_2_spin_2_ligstr_acetonitrile_acetonitrile_acetonitrile_fluoride_charge_nan.xyz  metal_co_ox_2_spin_2_ligstr_ammonia_ammonia_ammonia_ammonia_charge_nan.xyz  metal_co_ox_2_spin_2_ligstr_ammonia_ammonia_ammonia_fluoride_charge_nan.xyz  metal_co_ox_2_spin_2_ligstr_ammonia_fluoride_fluoride_fluoride_charge_nan.xyz  metal_co_ox_2_spin_2_ligstr_cn_cn_cn_cn_charge_nan.xyz  (+4 more)
tmc_tools/: constants.py  io.py  orbital_energies.py  tools.py  utils.py
tmc_tools/graphs/: constructors.py  metrics.py  racs.py  visualize.py
tmc_tools/models/: dbloc.py
