[metadata]
name = tmc_tools
version = 0.0.1
author = Ralf Meyer
author_email = meyer.ralf@yahoo.com
description = Collection of utilities for transition metal complexes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7